# RubricAI

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml
.proxyai/checkpoints/0baa1f28-a6cb-4025-a784-5a6b5f104239/: 04f70c52-781d-4b94-8b02-0dad4dde12d4  35fd88c4-937e-42af-a04b-d31614384ed0
.serena/: project.yml
docs/: examples.md
environment/: initial_state_template.json
prompts/: workflow.md
prompts/templates/: claude.md.j2  gemini.md.j2  generic.md.j2  openai.md.j2  pycharm.md.j2
scripts/: install_claude_config.py  render_prompt.py
src/: main.py
src/rubricai/: auth.py  cache.py  intel_derive.py  server.py
src/rubricai/fetchers/: epss.py  gh_advisory.py  kev.py  nvd.py  osv.py  poc.py  retry.py
src/rubricai/policy/: __init__.py  bod_26_04.py  chml.py  definitions.py  epss_v5.py  registry.py
src/rubricai/schemas/: __init__.py  assessment.py  environment.py  evidence.py  finding.py  intel.py
src/rubricai/scoring/: environmental.py  priority.py
src/rubricai/templates/: report.card.html.j2  report.md.j2
src/rubricai/tools/: bom.py  environment.py  intel.py  policy.py  project_scan.py  report.py  scoring.py  scoring_compare.py
tests/: test_auth.py  test_bod_26_04.py  test_bom.py  test_chml.py  test_docs_examples.py  test_environment.py  test_epss_v5.py  test_fetchers.py  test_install_claude_config.py  test_intel.py  test_intel_derive.py  test_project_scan.py  test_report.py  test_schemas.py  test_scoring.py  test_scoring_compare.py  test_server.py  test_version.py  test_workflow_e2e.py
