[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "RubricAI"
version = "1.4.0"
description = "Vulnerability prioritisation MCP server — deterministic CHML scoring with CISA KEV, EPSS, and NVD intel"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "fastmcp~=3.4",
  "python-dotenv~=1.0",
  "httpx~=0.28",
  "pydantic~=2.13",
  "jinja2~=3.1",
  "weasyprint>=69.0,<71.0",
]

[project.scripts]
rubricai = "main:main"

[project.optional-dependencies]
dev = [
  "black>=25.1,<27.0",
  "ruff~=0.15",
  "isort~=8.0",
  "pre-commit~=4.6",
  "pytest~=9.0",
  "pytest-cov~=7.1",
  "pytest-asyncio~=1.4",
  "detect-secrets~=1.5",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "PT"]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S", "ANN"]
# Rationale/action strings are intentionally verbose prose — line length not enforced
"src/rubricai/policy/chml.py" = ["E501"]
"src/rubricai/policy/definitions.py" = ["E501"]
"src/rubricai/policy/epss_v5.py" = ["E501"]
"src/rubricai/policy/bod_26_04.py" = ["E501"]
"src/rubricai/tools/policy.py" = ["E501"]
"scripts/render_prompt.py" = ["E501"]
"tests/test_bod_26_04.py" = ["E501"]
"src/rubricai/tools/project_scan.py" = ["E501", "S314"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
asyncio_mode = "auto"
